Deployment/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: localweatherapp-svc
  namespace: localweatherapp-ns
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: localweatherapp-app

  type: ClusterIP
