Deployment/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: localweatherapp-ns
spec:
  ingressClassName: nginx
  rules:
    - host: weatherapp.youssofkhawaja.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: localweatherapp-svc
                port:
                  number: 80
